Trying devenv + nix; numpy still broken!

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@
 # Whisper models.
 *.pt
 
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
